# zed-meson

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  extension.toml  flake.nix  meson.build
languages/meson/: config.toml
src/: meson.rs
